<resources>
    <string name="app_name">CIMS</string>

    <string name="title_activity_confirmed_case">ConfirmedCaseActivity</string>
    <string name="tab_text_1">Map View</string>
    <string name="tab_text_2">Table View</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="btnCancelText">취소</string>
    <string name="btnAddText">입력</string>

    <string name="vaccine_1">화이자</string>
    <string name="vaccine_2">모더나</string>
    <string name="vaccine_3">얀센</string>
    <string name="vaccine_4">아스트라제네카</string>


    <string name="addSideEffectTitle">백신 부작용 추가</string>
    <string name="vaccineNameText">백신 종류</string>
    <string name="sideEffectText">부작용</string>
    <string name="getSymptomText">발현 인원</string>
    <string name="treatmentText">대처 방법</string>
    <string name="occurProbabilityText">발현 확률</string>
    <string name="symptomInputHint">부작용의 증상을 입력하세요.</string>
    <string name="getSymptomInputHint">발현 인원을 입력하세요.</string>
    <string name="treatmentInputHint">부작용 대처방법을 입력하세요.</string>
    <string name="occurProbabilityInputHint">발현 확률을 입력하세요.</string>

    <string name="addVisitedRecordTitle">확진자 방문장소 추가</string>
    <string name="placeNameText">장소명</string>
    <string name="visitedDateText">방문 날짜</string>
    <string name="addressText">주소</string>
    <string name="latitudeText">위도</string>
    <string name="longitudeText">경도</string>
    <string name="placeNameInputHint">방문 장소명을 입력하세요.</string>
    <string name="visitedDateInputHint">방문 날짜를 입력하세요.</string>
    <string name="addressInputHint">주소를 입력하세요.</string>
    <string name="latitudeInputHint">위도를 입력하세요.</string>
    <string name="longitudeInputHint">경도를 입력하세요.</string>



</resources>